--- a/404.html
+++ b/404.html
@@ -1888,15 +1888,105 @@
 								</div>
 							</div>
 						</div>
-						<div class="c-search header__search">
-							<form action="#" class="c-search__form">
-								<input type="text" class="c-search__input" placeholder="Начать поиск">
-								<button class="c-search__btn" aria-label="Поиск">
+						<div class="header-search header__search">
+							<form action="#" class="header-search__form">
+								<input type="text" class="header-search__input" placeholder="Начать поиск" value="">
+								<div class="header-search__controls">
+									<button class="header-search__clear" aria-label="Очистить">
+										<svg>
+											<use xlink:href="img/sprite.svg#icon-close"></use>
+										</svg>
+									</button>
+									<button class="header-search__btn-search">Найти</button>
+								</div>
+								<button class="header-search__btn" aria-label="Поиск">
 									<svg>
 										<use xlink:href="img/sprite.svg#icon-search"></use>
 									</svg>
 								</button>
+								<button class="header-search__close">Отмена</button>
 							</form>
+							<div class="header-search__dropdown">
+								<span class="header-search__preview">Начните поиск - введите запрос</span>
+								<div class="header-search__results">
+									<div class="header-search__block">
+										<ul class="header-search__list">
+											<li class="header-search__list-item">
+												<a href="#" class="header-search__link">Гигиена носа</a>
+											</li>
+											<li class="header-search__list-item">
+												<a href="#" class="header-search__link">Косметика и гигиена</a>
+											</li>
+										</ul>
+									</div>
+									<div class="header-search__block">
+										<div class="header-search__list">
+											<a href="#" class="header-search__item">
+												<picture class="header-search__img">
+													<img src="img/header-search-01.png" alt="Image">
+												</picture>
+												<div class="header-search__group">
+													<span class="header-search__name">Аква <span>мари</span>с (эктоин спрей назальный 20 мл ) Jadran Galenski Laboratorij D. D.-Хорватия</span>
+													<span class="header-search__production">Производство: Хорватия</span>
+													<div class="header-search__prices">
+														<span class="header-search__price header-search__price--old">43.88 руб.</span>
+														<span class="header-search__price header-search__price--new">39.12 руб.</span>
+													</div>
+												</div>
+											</a>
+											<a href="#" class="header-search__item">
+												<picture class="header-search__img">
+													<img src="img/header-search-01.png" alt="Image">
+												</picture>
+												<div class="header-search__group">
+													<span class="header-search__name"><span>Мари</span>с (эктоин спрей назальный 20мл)</span>
+													<span class="header-search__production">Производство: Хорватия</span>
+													<div class="header-search__prices">
+														<span class="header-search__price">39.12 руб.</span>
+													</div>
+												</div>
+											</a>
+											<a href="#" class="header-search__item">
+												<picture class="header-search__img">
+													<img src="img/header-search-01.png" alt="Image">
+												</picture>
+												<div class="header-search__group">
+													<span class="header-search__name"><span>Мари</span>с (эктоин спрей назальный 20мл)</span>
+													<span class="header-search__production">Производство: Хорватия</span>
+													<div class="header-search__prices">
+														<span class="header-search__price">39.12 руб.</span>
+													</div>
+												</div>
+											</a>
+											<a href="#" class="header-search__item">
+												<picture class="header-search__img">
+													<img src="img/header-search-01.png" alt="Image">
+												</picture>
+												<div class="header-search__group">
+													<span class="header-search__name">Аква <span>мари</span>с (эктоин спрей назальный 20 мл ) Jadran Galenski Laboratorij D. D.-Хорватия</span>
+													<span class="header-search__production">Производство: Хорватия</span>
+													<div class="header-search__prices">
+														<span class="header-search__price header-search__price--old">543.88 руб.</span>
+														<span class="header-search__price header-search__price--new">939.12 руб.</span>
+													</div>
+												</div>
+											</a>
+											<a href="#" class="header-search__item">
+												<picture class="header-search__img">
+													<img src="img/header-search-01.png" alt="Image">
+												</picture>
+												<div class="header-search__group">
+													<span class="header-search__name"><span>Мари</span>с (эктоин спрей назальный 20мл)</span>
+													<span class="header-search__production">Производство: Хорватия</span>
+													<div class="header-search__prices">
+														<span class="header-search__price header-search__price--new">39.12 руб.</span>
+													</div>
+												</div>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="c-number header__number">
 							<div class="c-number__item">
