--- a/category.html
+++ b/category.html
@@ -29,12 +29,24 @@
 		<header class="header" id="header">
 			<div class="container">
 				<div class="header__wrapper header__wrapper--top">
-					<a href="#" class="c-location header__location">
-						<svg>
-							<use xlink:href="img/sprite.svg#icon-location"></use>
-						</svg>
-						<span>Витебск</span>
-					</a>
+					<div class="c-location header__location">
+						<a href="#" class="c-location__trigger">
+							<svg>
+								<use xlink:href="img/sprite.svg#icon-location"></use>
+							</svg>
+							<span>Витебск</span>
+						</a>
+						<div class="c-location__dropdown">
+							<span class="c-location__text">Это ваш город?</span>
+							<span class="c-location__text">
+								<b>Витебск</b>
+							</span>
+							<div class="c-location__controls">
+								<a href="#" class="c-location__btn btn" data-selected="true">Да</a>
+								<a href="#" class="c-location__btn btn btn--white-border" data-selected="true">Нет</a>
+							</div>
+						</div>
+					</div>
 					<ul class="header__list">
 						<li class="header__list-item">
 							<a href="#" class="header__link">Страхование</a>
@@ -1908,85 +1920,87 @@
 							</form>
 							<div class="header-search__dropdown">
 								<span class="header-search__preview">Начните поиск - введите запрос</span>
-								<div class="header-search__results">
-									<div class="header-search__block">
-										<ul class="header-search__list">
-											<li class="header-search__list-item">
-												<a href="#" class="header-search__link">Гигиена носа</a>
-											</li>
-											<li class="header-search__list-item">
-												<a href="#" class="header-search__link">Косметика и гигиена</a>
-											</li>
-										</ul>
-									</div>
-									<div class="header-search__block">
-										<div class="header-search__list">
-											<a href="#" class="header-search__item">
-												<picture class="header-search__img">
-													<img src="img/header-search-01.png" alt="Image">
-												</picture>
-												<div class="header-search__group">
-													<span class="header-search__name">Аква <span>мари</span>с (эктоин спрей назальный 20 мл ) Jadran Galenski Laboratorij D. D.-Хорватия</span>
-													<span class="header-search__production">Производство: Хорватия</span>
-													<div class="header-search__prices">
-														<span class="header-search__price header-search__price--old">43.88 руб.</span>
-														<span class="header-search__price header-search__price--new">39.12 руб.</span>
-													</div>
-												</div>
-											</a>
-											<a href="#" class="header-search__item">
-												<picture class="header-search__img">
-													<img src="img/header-search-01.png" alt="Image">
-												</picture>
-												<div class="header-search__group">
-													<span class="header-search__name"><span>Мари</span>с (эктоин спрей назальный 20мл)</span>
-													<span class="header-search__production">Производство: Хорватия</span>
-													<div class="header-search__prices">
-														<span class="header-search__price">39.12 руб.</span>
-													</div>
-												</div>
-											</a>
-											<a href="#" class="header-search__item">
-												<picture class="header-search__img">
-													<img src="img/header-search-01.png" alt="Image">
-												</picture>
-												<div class="header-search__group">
-													<span class="header-search__name"><span>Мари</span>с (эктоин спрей назальный 20мл)</span>
-													<span class="header-search__production">Производство: Хорватия</span>
-													<div class="header-search__prices">
-														<span class="header-search__price">39.12 руб.</span>
-													</div>
-												</div>
-											</a>
-											<a href="#" class="header-search__item">
-												<picture class="header-search__img">
-													<img src="img/header-search-01.png" alt="Image">
-												</picture>
-												<div class="header-search__group">
-													<span class="header-search__name">Аква <span>мари</span>с (эктоин спрей назальный 20 мл ) Jadran Galenski Laboratorij D. D.-Хорватия</span>
-													<span class="header-search__production">Производство: Хорватия</span>
-													<div class="header-search__prices">
-														<span class="header-search__price header-search__price--old">543.88 руб.</span>
-														<span class="header-search__price header-search__price--new">939.12 руб.</span>
-													</div>
-												</div>
-											</a>
-											<a href="#" class="header-search__item">
-												<picture class="header-search__img">
-													<img src="img/header-search-01.png" alt="Image">
-												</picture>
-												<div class="header-search__group">
-													<span class="header-search__name"><span>Мари</span>с (эктоин спрей назальный 20мл)</span>
-													<span class="header-search__production">Производство: Хорватия</span>
-													<div class="header-search__prices">
-														<span class="header-search__price header-search__price--new">39.12 руб.</span>
-													</div>
-												</div>
-											</a>
+								<div class="header-search__holder">
+									<div class="header-search__results">
+										<div class="header-search__block">
+											<ul class="header-search__list">
+												<li class="header-search__list-item">
+													<a href="#" class="header-search__link">Гигиена носа</a>
+												</li>
+												<li class="header-search__list-item">
+													<a href="#" class="header-search__link">Косметика и гигиена</a>
+												</li>
+											</ul>
 										</div>
-									</div>
-									<div class="header-search__bottom">
-										<a href="#" class="header-search__more btn">Показать все результаты</a>
+										<div class="header-search__block">
+											<div class="header-search__list">
+												<a href="#" class="header-search__item">
+													<picture class="header-search__img">
+														<img src="img/catalog-01.png" alt="Image">
+													</picture>
+													<div class="header-search__group">
+														<span class="header-search__name">Аква <span>мари</span>с (эктоин спрей назальный 20 мл ) Jadran Galenski Laboratorij D. D.-Хорватия</span>
+														<span class="header-search__production">Производство: Хорватия</span>
+														<div class="header-search__prices">
+															<span class="header-search__price header-search__price--old">43.88 руб.</span>
+															<span class="header-search__price header-search__price--new">39.12 руб.</span>
+														</div>
+													</div>
+												</a>
+												<a href="#" class="header-search__item">
+													<picture class="header-search__img">
+														<img src="img/catalog-01.png" alt="Image">
+													</picture>
+													<div class="header-search__group">
+														<span class="header-search__name"><span>Мари</span>с (эктоин спрей назальный 20мл)</span>
+														<span class="header-search__production">Производство: Хорватия</span>
+														<div class="header-search__prices">
+															<span class="header-search__price">39.12 руб.</span>
+														</div>
+													</div>
+												</a>
+												<a href="#" class="header-search__item">
+													<picture class="header-search__img">
+														<img src="img/catalog-01.png" alt="Image">
+													</picture>
+													<div class="header-search__group">
+														<span class="header-search__name"><span>Мари</span>с (эктоин спрей назальный 20мл)</span>
+														<span class="header-search__production">Производство: Хорватия</span>
+														<div class="header-search__prices">
+															<span class="header-search__price">39.12 руб.</span>
+														</div>
+													</div>
+												</a>
+												<a href="#" class="header-search__item">
+													<picture class="header-search__img">
+														<img src="img/catalog-01.png" alt="Image">
+													</picture>
+													<div class="header-search__group">
+														<span class="header-search__name">Аква <span>мари</span>с (эктоин спрей назальный 20 мл ) Jadran Galenski Laboratorij D. D.-Хорватия</span>
+														<span class="header-search__production">Производство: Хорватия</span>
+														<div class="header-search__prices">
+															<span class="header-search__price header-search__price--old">543.88 руб.</span>
+															<span class="header-search__price header-search__price--new">939.12 руб.</span>
+														</div>
+													</div>
+												</a>
+												<a href="#" class="header-search__item">
+													<picture class="header-search__img">
+														<img src="img/catalog-01.png" alt="Image">
+													</picture>
+													<div class="header-search__group">
+														<span class="header-search__name"><span>Мари</span>с (эктоин спрей назальный 20мл)</span>
+														<span class="header-search__production">Производство: Хорватия</span>
+														<div class="header-search__prices">
+															<span class="header-search__price header-search__price--new">39.12 руб.</span>
+														</div>
+													</div>
+												</a>
+											</div>
+										</div>
+										<div class="header-search__bottom">
+											<a href="#" class="header-search__more btn">Показать все результаты</a>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -2054,12 +2068,14 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__inner">
-							<a href="#" class="c-location mobile-menu__location">
-								<svg>
-									<use xlink:href="img/sprite.svg#icon-location"></use>
-								</svg>
-								<span>Витебск</span>
-							</a>
+							<div class="c-location mobile-menu__location">
+								<a href="#" class="c-location__trigger">
+									<svg>
+										<use xlink:href="img/sprite.svg#icon-location"></use>
+									</svg>
+									<span>Витебск</span>
+								</a>
+							</div>
 							<div class="c-user mobile-menu__user">
 								<a href="#" class="c-user__trigger">
 									<picture class="c-user__img">
@@ -4932,7 +4948,7 @@
 													<h3 class="catalog-filter__heading">Бренд</h3>
 													<button class="catalog-filter__reset">Сбросить</button>
 												</div>
-												<div class="catalog-filter__scroll">
+												<div class="catalog-filter__all">
 													<div class="catalog-filter__group">
 														<div class="c-search catalog-filter__search">
 															<div class="c-search__form">
@@ -4945,62 +4961,64 @@
 															</div>
 														</div>
 													</div>
-													<div class="catalog-filter__group">
-														<span class="catalog-filter__letter">A</span>
-														<div class="catalog-filter__checkboxes">
-															<div class="square-checkbox catalog-filter__checkbox">
-																<input type="checkbox" class="square-checkbox__input" id="filter-brand-01">
-																<label for="filter-brand-01" class="square-checkbox__group">
-																	<span class="square-checkbox__icon"></span>
-																	<span class="square-checkbox__title">Аnovartis Pharma</span>
-																</label>
-															</div>
-															<div class="square-checkbox catalog-filter__checkbox">
-																<input type="checkbox" class="square-checkbox__input" id="filter-brand-02">
-																<label for="filter-brand-02" class="square-checkbox__group">
-																	<span class="square-checkbox__icon"></span>
-																	<span class="square-checkbox__title">AstraZeneca</span>
-																</label>
-															</div>
-															<div class="square-checkbox catalog-filter__checkbox">
-																<input type="checkbox" class="square-checkbox__input" id="filter-brand-03">
-																<label for="filter-brand-03" class="square-checkbox__group">
-																	<span class="square-checkbox__icon"></span>
-																	<span class="square-checkbox__title">Astellas Pharma</span>
-																</label>
-															</div>
-															<div class="square-checkbox catalog-filter__checkbox">
-																<input type="checkbox" class="square-checkbox__input" id="filter-brand-04">
-																<label for="filter-brand-04" class="square-checkbox__group">
-																	<span class="square-checkbox__icon"></span>
-																	<span class="square-checkbox__title">Astra</span>
-																</label>
+													<div class="catalog-filter__scroll" data-simplebar>
+														<div class="catalog-filter__group">
+															<span class="catalog-filter__letter">A</span>
+															<div class="catalog-filter__checkboxes">
+																<div class="square-checkbox catalog-filter__checkbox">
+																	<input type="checkbox" class="square-checkbox__input" id="filter-brand-01">
+																	<label for="filter-brand-01" class="square-checkbox__group">
+																		<span class="square-checkbox__icon"></span>
+																		<span class="square-checkbox__title">Аnovartis Pharma</span>
+																	</label>
+																</div>
+																<div class="square-checkbox catalog-filter__checkbox">
+																	<input type="checkbox" class="square-checkbox__input" id="filter-brand-02">
+																	<label for="filter-brand-02" class="square-checkbox__group">
+																		<span class="square-checkbox__icon"></span>
+																		<span class="square-checkbox__title">AstraZeneca</span>
+																	</label>
+																</div>
+																<div class="square-checkbox catalog-filter__checkbox">
+																	<input type="checkbox" class="square-checkbox__input" id="filter-brand-03">
+																	<label for="filter-brand-03" class="square-checkbox__group">
+																		<span class="square-checkbox__icon"></span>
+																		<span class="square-checkbox__title">Astellas Pharma</span>
+																	</label>
+																</div>
+																<div class="square-checkbox catalog-filter__checkbox">
+																	<input type="checkbox" class="square-checkbox__input" id="filter-brand-04">
+																	<label for="filter-brand-04" class="square-checkbox__group">
+																		<span class="square-checkbox__icon"></span>
+																		<span class="square-checkbox__title">Astra</span>
+																	</label>
+																</div>
 															</div>
 														</div>
-													</div>
-													<div class="catalog-filter__group">
-														<span class="catalog-filter__letter">B</span>
-														<div class="catalog-filter__checkboxes">
-															<div class="square-checkbox catalog-filter__checkbox">
-																<input type="checkbox" class="square-checkbox__input" id="filter-brand-11">
-																<label for="filter-brand-11" class="square-checkbox__group">
-																	<span class="square-checkbox__icon"></span>
-																	<span class="square-checkbox__title">Bayer</span>
-																</label>
-															</div>
-															<div class="square-checkbox catalog-filter__checkbox">
-																<input type="checkbox" class="square-checkbox__input" id="filter-brand-12">
-																<label for="filter-brand-12" class="square-checkbox__group">
-																	<span class="square-checkbox__icon"></span>
-																	<span class="square-checkbox__title">Bayer Pharma</span>
-																</label>
-															</div>
-															<div class="square-checkbox catalog-filter__checkbox">
-																<input type="checkbox" class="square-checkbox__input" id="filter-brand-13">
-																<label for="filter-brand-13" class="square-checkbox__group">
-																	<span class="square-checkbox__icon"></span>
-																	<span class="square-checkbox__title">BastraZeneca</span>
-																</label>
+														<div class="catalog-filter__group">
+															<span class="catalog-filter__letter">B</span>
+															<div class="catalog-filter__checkboxes">
+																<div class="square-checkbox catalog-filter__checkbox">
+																	<input type="checkbox" class="square-checkbox__input" id="filter-brand-11">
+																	<label for="filter-brand-11" class="square-checkbox__group">
+																		<span class="square-checkbox__icon"></span>
+																		<span class="square-checkbox__title">Bayer</span>
+																	</label>
+																</div>
+																<div class="square-checkbox catalog-filter__checkbox">
+																	<input type="checkbox" class="square-checkbox__input" id="filter-brand-12">
+																	<label for="filter-brand-12" class="square-checkbox__group">
+																		<span class="square-checkbox__icon"></span>
+																		<span class="square-checkbox__title">Bayer Pharma</span>
+																	</label>
+																</div>
+																<div class="square-checkbox catalog-filter__checkbox">
+																	<input type="checkbox" class="square-checkbox__input" id="filter-brand-13">
+																	<label for="filter-brand-13" class="square-checkbox__group">
+																		<span class="square-checkbox__icon"></span>
+																		<span class="square-checkbox__title">BastraZeneca</span>
+																	</label>
+																</div>
 															</div>
 														</div>
 													</div>
